<resources>
    <string name="app_name">TestMe123</string>
    <string name="test_me">Test Me</string>
    <string name="add_question">Add questions</string>
    <string name="question">Question:</string>
    <string name="answer_one">Choice 1 (Correct answer):</string>
    <string name="answer_two">Choice 2:</string>
    <string name="answer_three">Choice 3:</string>
    <string name="answer_four">Choice 4:</string>
    <string name="cancel_button">Cancel</string>
    <string name="admin_button">Admin</string>
    <string name="save_button">Save</string>
    <string name="submit_button">Submit</string>
    <string name="login_button">Login</string>
    <string name="enter_question">Please enter question</string>
    <string name="enter_answer_one">Please enter choice 1</string>
    <string name="enter_answer_two">Please enter choice 2</string>
    <string name="enter_answer_three">Please enter choice 3</string>
    <string name="enter_answer_four">Please enter choice 4</string>
    <string name="question_category_text">Category:</string>
    <string name="enter_question_category">Please enter question category</string>
    <string name="available_category">Available categories:</string>
    <string name="geography_category_text">Geography</string>
    <string name="history_category_text">History</string>
    <string name="guideline_text">Please select your answer below:</string>
    <string name="admin_access_text">Use your Administrator password below:</string>
    <string name="admin_access_hint">Enter password:</string>
    <string name="result_text">Your score is:</string>
    <string name="try_again_button">Try again</string>
    <string name="go_to_homepage">Home</string>
    <string name="admin_info_text">Admins are able to view, add, edit and update questions</string>
    <string name="books_category_text">Books</string>
    <string name="movies_category_text">Movies</string>
</resources>
